--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,5 +38,4 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ${{ secrets.APP_PATH }}
-            pwd
-            ls -l
+            git pull
